env.js creating fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,8 +20,12 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location /env.js {
-            add_header Cache-Control "no-store";
+        location = /env.js {
+            root   /usr/share/nginx/html;
+            default_type application/javascript;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+            expires 0;
         }
+
     }
 }
